<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


        <TextView
            android:layout_margin="@dimen/fab_margin"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/ratebuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/llrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <TextView
            android:layout_margin="@dimen/fab_margin"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/llnever"
            android:background="#ffffff"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="@dimen/fab_margin"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/nonever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:background="@color/colorPrimary"
            android:layout_weight=".01"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/lllater"
            android:background="#ffffff"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="@dimen/fab_margin"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/later"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
