<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="@dimen/frag_padd">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:paddingBottom="@dimen/fab_margin">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:id="@+id/frag_funify_randomize_colors_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <android.support.v7.widget.CardView
                        android:layout_margin="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp"
                        android:paddingBottom="@dimen/fab_margin">
                        <LinearLayout
                            android:background="@color/colorPrimary"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:background="@color/white"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:background="@color/colorPrimaryDark"
                            android:fontFamily="sans-serif-smallcaps"
                            android:textSize="20dp"
                            android:textColor="@color/white"
                            android:text="@string/randomizeColor"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                            <TextView
                                android:fontFamily="serif"
                                android:textColor="@color/colorPrimary"
                                android:textAlignment="center"
                                android:textSize="20dp"
                                android:paddingBottom="8dp"
                                android:text="@string/tap"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />


                    </LinearLayout>



                    <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/white"/>
                            <LinearLayout
                                android:background="@color/colorPrimary"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_height="match_parent">
                                <android.support.design.widget.FloatingActionButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:fabSize="mini"
                                    app:srcCompat="@drawable/ic_touch_app_black_24dp"/>
                            </LinearLayout>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:paddingBottom="@dimen/fab_margin">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <android.support.v7.widget.CardView
                        android:layout_margin="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp"
                        android:paddingBottom="@dimen/fab_margin">
                        <LinearLayout
                            android:id="@+id/frag_funify_randomize_size_card"
                            android:background="@color/colorPrimary"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_weight="4"
                                android:background="@color/white"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:layout_height="wrap_content"
                                >
                                <TextView
                                    android:background="@color/colorPrimaryDark"
                                    android:fontFamily="sans-serif-smallcaps"
                                    android:textSize="20dp"
                                    android:textColor="@color/white"
                                    android:text="@string/randomizeSize"
                                    android:textAlignment="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />

                                <TextView
                                    android:fontFamily="serif"
                                    android:textColor="@color/colorPrimary"
                                    android:textAlignment="center"
                                    android:textSize="20dp"
                                    android:paddingBottom="8dp"
                                    android:text="@string/tap"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />


                            </LinearLayout>

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/white"/>
                            <LinearLayout
                                android:background="@color/colorPrimary"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_height="match_parent">
                                <android.support.design.widget.FloatingActionButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:fabSize="mini"
                                    app:srcCompat="@drawable/ic_touch_app_black_24dp"/>
                            </LinearLayout>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </android.support.v7.widget.CardView>



        </LinearLayout>


    </ScrollView>



</LinearLayout>
